--- a/documentation/modules/ROOT/examples/bgdk-app.yaml
+++ b/documentation/modules/ROOT/examples/bgdk-app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: bgdk-app
 spec:
   destination:
-    namespace: user$USERNUM-bgdk
+    namespace: piotr-playground
     server: https://kubernetes.default.svc
   project: default
   source:
