--- a/documentation/modules/ROOT/examples/bgdk/kustomization.yaml
+++ b/documentation/modules/ROOT/examples/bgdk/kustomization.yaml
@@ -6,7 +6,7 @@ patches:
 - patch: |-
     - op: replace
       path: /spec/template/spec/containers/0/env/0/value
-      value: yellow
+      value: red
   target:
     group: apps
     kind: Deployment
